Project

General

Profile

Actions

Bug #37868

closed

qa/standalone/mon/mon-handle-forward.sh failure

Added by Sage Weil over 5 years ago. Updated over 5 years ago.

Status:
Resolved
Priority:
Urgent
Assignee:
Category:
-
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Component(RADOS):
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

/a/sage-2019-01-10_15:03:47-rados-wip-sage-testing-2019-01-10-0709-distro-basic-smithi/3442655

2019-01-10T19:40:47.535 INFO:tasks.workunit.client.0.smithi062.stderr:/home/ubuntu/cephtest/clone.client.0/qa/standalone/mon/mon-handle-forward.sh:45: run:  grep 'mon_command(.*"POOL1"' td/mon-handle-forward/mon.b.log
2019-01-10T19:40:47.537 INFO:tasks.workunit.client.0.smithi062.stdout:2019-01-10 19:40:47.164 7f77cc9cc700  5 --2- v2:127.0.0.1:7301/0 >> v2:127.0.0.1:43826/297784272 conn(0x55fd59642400 msgr2 :36124 s=READ_FOOTER_AND_DISPATCH pgs=4 cs=1 l=1). rx client.4104 seq 5 0x55fd591ca6c0 mon_command({"prefix": "osd pool create", "pg_num": 12, "pool": "POOL1"} v 0) v1
...

the monclient reconnect-on-monmap-change logic is a bit to aggressive and is breaking this test's attempt to send its message to a specific mon.

Actions #1

Updated by Sage Weil over 5 years ago

  • Status changed from In Progress to Fix Under Review
Actions #2

Updated by Sage Weil over 5 years ago

  • Status changed from Fix Under Review to Resolved
Actions

Also available in: Atom PDF